--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -2,10 +2,16 @@
   <ion-grid>
     <ion-row>
       <ion-col size-md="6" offset-md="3" size-lg="4" offset-lg="4">
-        <ion-card mode="ios">
-          <ion-card-content>
+        <!-- <ion-card mode="ios">
+          <ion-card-content> -->
             <div class="center">
-              <chh-app-logo></chh-app-logo>
+              <!-- <chh-app-logo></chh-app-logo> -->
+              <img
+                src="assets/img/doctors-rafiki.svg"
+                width="250"
+                height="250"
+                alt="doctors-login"
+              />
               <h1>
                 <b
                   >{{this.constants.UI_COMPONENT_TEXT__VALUE__LOGIN_GREETINGS}}</b
@@ -65,22 +71,23 @@
                 ><ion-spinner *ngIf="btnDisable"></ion-spinner>
               </ion-button>
             </div>
-          </ion-card-content>
+          <!-- </ion-card-content> -->
 
           <ion-item class="fontSize-12">
-            <p>
+            <p align="justify">
               {{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO}} (<b
                 ><a href="tel: +63322338000"
                   >{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO_TELEPHONE}}</a
                 ></b
               >). <br />
-              <br />{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO_APP_VERSION}} {{this.constants.DOCTOR_PORTAL__VALUE__VERSION}}
+              <br />{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO_APP_VERSION}}
+              {{this.constants.DOCTOR_PORTAL__VALUE__VERSION}}
             </p>
           </ion-item>
           <ion-item lines="none" class="fontSize-12">
             <ion-label>( Made by Chong Hua for Chong Hua )</ion-label>
           </ion-item>
-        </ion-card>
+        <!-- </ion-card> -->
       </ion-col>
     </ion-row>
   </ion-grid>
