--- a/src/app/tab-settings/tab-settings.page.html
+++ b/src/app/tab-settings/tab-settings.page.html
@@ -92,6 +92,7 @@
                   value="{{prcBar}}"
                   buffer="1"
                   color="{{prcBarColor}}"
+                  class="{{prcBarHide}}"
                 ></ion-progress-bar>
             
             
@@ -114,6 +115,7 @@
                     value="{{phicBar}}"
                     buffer="1"
                     color="{{phicBarColor}}"
+                    class="{{phicBarHide}}"
                   ></ion-progress-bar>
               
               
