--- a/src/app/tab-news-feed/tab-news-feed.page.html
+++ b/src/app/tab-news-feed/tab-news-feed.page.html
@@ -47,13 +47,15 @@
       </ion-col>
     </ion-row>        
   </ion-grid>
-
-
-
-
-
-
-
-
-
 </ion-content>
+<!--ion-content class="ion-padding" color="light">  
+  <ion-list>  
+    <ion-item *ngFor="let item of items"> {{item}} </ion-item>  
+  </ion-list>  
+  <ion-infinite-scroll (ionInfinite)="loadData($event)" [disabled]="numTimesLeft <= 0">  
+    <ion-infinite-scroll-content  
+      loadingSpinner="bubbles"  
+      loadingText="Loading more data...">  
+    </ion-infinite-scroll-content>  
+  </ion-infinite-scroll>  
+</ion-content-->  
