--- a/src/app/tab-news-feed/tab-news-feed.page.html
+++ b/src/app/tab-news-feed/tab-news-feed.page.html
@@ -15,8 +15,8 @@
   <ion-grid class="ion-no-padding">
     <ion-row>
       <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4">
-        <ion-card>
-          <img src="assets/img/red-8-1.jpg" />
+        <ion-card (click)="showaddmodal1()">
+          <img src="http://10.130.21.225/patientportal/uploads/YRJLQDTS2569_1.jpg" />
           <ion-card-header>
             <ion-card-title>RED 8</ion-card-title>
           </ion-card-header>
@@ -24,8 +24,7 @@
             We were fortunate to have the renowned Dr. Iris Isip-Tan to share insights in keeping up with the challenges in medical practice in this time of pandemic.
           </ion-card-content>
         </ion-card>
-        <ion-card>
-          <img src="assets/img/red-8-2.jpg" />
+        <ion-card (click)="showaddmodal1()">
           <ion-card-header>
             <ion-card-title>RED 8</ion-card-title>
           </ion-card-header>
@@ -33,8 +32,8 @@
             A Hepatitis B masterclass, with updates and review of current guidelines, by our eminent Hepatologist, Dr. Jenny Limquiaco
           </ion-card-content>
         </ion-card>
-        <ion-card>
-          <img src="assets/img/red-8-3.jpg" />
+        <ion-card (click)="showaddmodal1()">
+          <img src="http://10.130.21.225/patientportal/uploads/Vcards_back.png" />
           <ion-card-header>
             <ion-card-title>RED 8</ion-card-title>
           </ion-card-header>
