--- a/src/app/chh-web-components/chh-app-change-password/chh-app-change-password.page.html
+++ b/src/app/chh-web-components/chh-app-change-password/chh-app-change-password.page.html
@@ -91,6 +91,12 @@
               <ion-item lines="none" >
                 <ion-label  for="oldpassword"  ><b>Old Password</b></ion-label><br />
               </ion-item>
+              <ion-item lines="none">
+                <ion-input id="confirmPassword" formControlName="confirmPassword" type="password" class="form-control"
+                [ngClass]="frmSignup.controls['oldPassword'].invalid ? 'is-invalid' : ''"[type]="getType4()"  [(ngModel)]="OldPassword" placeholder = "Confirm Password"></ion-input>
+                <ion-icon  name="eye-off-outline" [name]="getName4()"item-right  (click)="showPassword3()"  class="rectangle3"></ion-icon>
+              </ion-item>
+
               <ion-item lines="none" >
                 <ion-label  for="password" [ngClass]="frmSignup.controls['password'].invalid ? 'text-danger' : ''" class=" pWord" #psWord1 id="pWord1" ><b >New Password</b> <i>{{errMessage}}</i></ion-label><br />
               </ion-item>
@@ -143,11 +149,7 @@
               </ion-item>
 
 
-              <ion-item lines="none">
-                <ion-input id="confirmPassword" formControlName="confirmPassword" type="password" class="form-control"
-                [ngClass]="frmSignup.controls['oldPassword'].invalid ? 'is-invalid' : ''"[type]="getType4()"  [(ngModel)]="OldPassword" placeholder = "Confirm Password"></ion-input>
-                <ion-icon  name="eye-off-outline" [name]="getName4()"item-right  (click)="showPassword3()"  class="rectangle3"></ion-icon>
-              </ion-item>
+
   
           </div>
 
@@ -164,8 +166,11 @@
                   (click)="save()"
                   color="mango"
                   [disabled]="frmSignup.invalid"
+                  disabled="{{btnDisable}}"
                 >
                   SAVE
+                  <span *ngIf="!btnDisable"></span
+                    ><ion-spinner *ngIf="btnDisable"></ion-spinner>
                 </ion-button>
               </ion-col>
               <ion-col size-xs="6">
