--- a/src/app/tab-dashboard/tab-dashboard.page.html
+++ b/src/app/tab-dashboard/tab-dashboard.page.html
@@ -31,7 +31,7 @@
             </ion-avatar>
             
             <ion-label>
-              <h1><b>{{getTotalCount.Admitted}}</b></h1>
+              <h1><b>{{getTotalCount.admitted}}</b></h1>
               <p>{{this.functionsService.convertToCamelCase(this.constants.ADMISSION_STATUS__VALUE__ADMITTED)}}</p>
             </ion-label>
           </ion-item>
@@ -42,7 +42,7 @@
               <chh-app-text-avatar [text]='discharge' [color]=""></chh-app-text-avatar>
             </ion-avatar>
             <ion-label>
-              <h1><b>{{getTotalCount.ForDischarge}}</b></h1>
+              <h1><b>{{getTotalCount.forDischarge}}</b></h1>
               <p class="ion-text-wrap" >{{this.functionsService.convertToCamelCase(this.constants.ADMISSION_STATUS__VALUE__FOR_DISCHARGE)}}</p>
             </ion-label>
           </ion-item>
