--- a/src/app/tab-news-feed/tab-news-feed.page.html
+++ b/src/app/tab-news-feed/tab-news-feed.page.html
@@ -15,34 +15,27 @@
   <ion-grid class="ion-no-padding">
     <ion-row>
       <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4">
-        <ion-card (click)="showaddmodal1()">
-          <img src="http://10.130.21.225/patientportal/uploads/YRJLQDTS2569_1.jpg" />
+        <div *ngFor="let x of newsfeed">
+        <ion-card (click)="showaddmodal1(x)" *ngIf="x.visibility">
+          <!--img  *ngIf="x.imageUrl != ''" src="{{x.imageUrl}}" style="width: auto; height: auto;width: 100%;max-height: 200px" />
+          <div class="rect-img-container"  *ngIf="x.imageUrl != ''">
+            <img class="rect-img" src="{{x.imageUrl}}" alt="">
+          </div-->
+
+
+          <div *ngIf="x.imageUrl != ''" class="use-cover-background square" style="background-image: url({{x.imageUrl}})"></div>
+
           <ion-card-header>
-            <ion-card-title>RED 8</ion-card-title>
+            <ion-card-title class="ion-text-wrap">{{x.title}}</ion-card-title>
           </ion-card-header>
           <ion-card-content>
-            We were fortunate to have the renowned Dr. Iris Isip-Tan to share insights in keeping up with the challenges in medical practice in this time of pandemic.
+
+            <p [innerHTML]="x.contentShortDesc"></p>
+            
           </ion-card-content>
         </ion-card>
-        <ion-card (click)="showaddmodal1()">
-          <ion-card-header>
-            <ion-card-title>RED 8</ion-card-title>
-          </ion-card-header>
-          <ion-card-content>
-            A Hepatitis B masterclass, with updates and review of current guidelines, by our eminent Hepatologist, Dr. Jenny Limquiaco
-          </ion-card-content>
-        </ion-card>
-        <ion-card (click)="showaddmodal1()">
-          <img src="http://10.130.21.225/patientportal/uploads/Vcards_back.png" />
-          <ion-card-header>
-            <ion-card-title>RED 8</ion-card-title>
-          </ion-card-header>
-          <ion-card-content>
-            We’ve reached the last leg of our journey. Join us today as we conclude our 8th Postgraduate Course in Internal Medicine!<br />
-            Don’t forget, the iPAD AIR 4 will be raffled off at the end of the day.
-            <a href="https://natrapharm.zoom.us/webinar/register/WN_2pcB7YpUScGzWd2QJ_vCVg?fbclid=IwAR01eUmlsfIREH1ND6jsnZqUR6zaWZG6JqlGDw8oiuJGvhVbyXzy0O5ILqs" target="_BLANK">Register Here</a>
-          </ion-card-content>
-        </ion-card>
+        </div>
+       
       </ion-col>
     </ion-row>        
   </ion-grid>
