forgot/reset password

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -70,6 +70,12 @@
                 <span *ngIf="!btnDisable"></span
                 ><ion-spinner *ngIf="btnDisable"></ion-spinner>
               </ion-button>
+              <ion-item class="fontSize-12">
+                <p align="justify"     (click)="forgotpassword()">
+                  
+                  Forgot Password
+                </p>
+              </ion-item>
             </div>
           <!-- </ion-card-content> -->
 
