--- a/src/app/pages/resetpassword/resetpassword.page.html
+++ b/src/app/pages/resetpassword/resetpassword.page.html
@@ -21,7 +21,7 @@
   <ion-content>
     <ion-grid class="my-backbround ion-no-padding">
       <ion-row>
-        <ion-col>
+        <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4">
   
           <ion-card mode="ios"   >
   
