--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -14,7 +14,7 @@
       <ion-icon name="calendar-outline"></ion-icon>
       <ion-label class="tab-font-family">{{this.constants.MENU__VALUE__APPOINTMENTS}}</ion-label>
     </ion-tab-button-->
-    <ion-tab-button id="button-appointments" tab="news-feed">
+    <ion-tab-button id="button-news-feed" tab="news-feed">
       <ion-icon name="newspaper-outline"></ion-icon>
       <ion-label class="tab-font-family">News Feed</ion-label>
     </ion-tab-button>
