--- a/src/app/chh-web-components/chh-app-newsfeed/chh-app-newsfeed.component.html
+++ b/src/app/chh-web-components/chh-app-newsfeed/chh-app-newsfeed.component.html
@@ -64,7 +64,7 @@
 <ion-content>
   <ion-grid class="ion-no-padding">
     <ion-row>
-      <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4">
+      <ion-col >
         <ion-card>
           <img *ngIf="data.imageUrl != ''" src="{{data.imageUrl}}" />
           <ion-card-header>
