--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -139,12 +139,12 @@
       </li>
       <li class="lineheight-80 paddingtop-10">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Only the excess amount of <b>&#8369;{{InsurancePF | number}}</b> (+ VAT) will be collected from your patient.</ion-text
+          >Only the excess amount of <b>&#8369;{{InsurancePF}}</b> (+ VAT) will be collected from your patient.</ion-text
         >
       </li>
       <li class="lineheight-80 paddingtop-10">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Receivables: Insurance (HMO) + PhilHealth + <b>&#8369;{{InsurancePF | number}}</b> (+ VAT)</ion-text
+          >Receivables: Insurance (HMO) + PhilHealth + <b>&#8369;{{InsurancePF}}</b> (+ VAT)</ion-text
         >
       </li>
       <li class="lineheight-80 paddingtop-10">
@@ -162,12 +162,12 @@
       </li>
       <li class="lineheight-80 paddingtop-10">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Only the excess amount of <b>&#8369;{{InsurancePF | number}}</b> will be collected from your patient.</ion-text
+          >Only the excess amount of <b>&#8369;{{InsurancePF}}</b> will be collected from your patient.</ion-text
         >
       </li>
       <li class="lineheight-80 paddingtop-10">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Receivables: Insurance (HMO) + PhilHealth + <b>&#8369;{{InsurancePF | number}}</b>
+          >Receivables: Insurance (HMO) + PhilHealth + <b>&#8369;{{InsurancePF}}</b>
         </ion-text>
       </li>
       <li class="lineheight-80 paddingtop-10">
@@ -411,12 +411,12 @@ ______                         ______   _   _   _____   _____
     <ul *ngIf="!txtPersonalPhilHealthPF && txtPersonalPhilHealthVAT">
       <li class="lineheight-80">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Total amount of <b>&#8369;{{PersonalPhilhealthPF | number}}</b> (+ VAT) will be collected from your patient.</ion-text
+          >Total amount of <b>&#8369;{{PersonalPhilhealthPF}}</b> (+ VAT) will be collected from your patient.</ion-text
         >
       </li>
       <li class="lineheight-80 paddingtop-10">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Receivables: <b>&#8369;{{PersonalPhilhealthPF | number}}</b> (+ VAT) + PhilHealth</ion-text
+          >Receivables: <b>&#8369;{{PersonalPhilhealthPF}}</b> (+ VAT) + PhilHealth</ion-text
         >
       </li>
       <li class="lineheight-80 paddingtop-10">
@@ -429,12 +429,12 @@ ______                         ______   _   _   _____   _____
     <ul *ngIf="!txtPersonalPhilHealthPF && !txtPersonalPhilHealthVAT">
       <li class="lineheight-80">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Total amount of <b>&#8369;{{PersonalPhilhealthPF | number}}</b> will be collected from your patient.</ion-text
+          >Total amount of <b>&#8369;{{PersonalPhilhealthPF}}</b> will be collected from your patient.</ion-text
         >
       </li>
       <li class="lineheight-80 paddingtop-10">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Receivables: <b>&#8369;{{PersonalPhilhealthPF | number}}</b> + PhilHealth</ion-text
+          >Receivables: <b>&#8369;{{PersonalPhilhealthPF}}</b> + PhilHealth</ion-text
         >
       </li>
       <li class="lineheight-80 paddingtop-10">
@@ -733,12 +733,12 @@ ______          _    _
     </li>
     <li class="lineheight-80 paddingtop-10">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >Only the excess amount of <b>&#8369;{{InsurancePF | number}}</b> (+ VAT) will be collected from your patient.</ion-text
+        >Only the excess amount of <b>&#8369;{{InsurancePF}}</b> (+ VAT) will be collected from your patient.</ion-text
       >
     </li>
     <li class="lineheight-80 paddingtop-10">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >Receivables: Insurance (HMO) + PhilHealth + <b>&#8369;{{InsurancePF | number}}</b> (+ VAT)</ion-text
+        >Receivables: Insurance (HMO) + PhilHealth + <b>&#8369;{{InsurancePF}}</b> (+ VAT)</ion-text
       >
     </li>
     <li class="lineheight-80 paddingtop-10">
@@ -756,12 +756,12 @@ ______          _    _
     </li>
     <li class="lineheight-80 paddingtop-10">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >Only the excess amount of <b>&#8369;{{InsurancePF | number}}</b> will be collected from your patient.</ion-text
+        >Only the excess amount of <b>&#8369;{{InsurancePF}}</b> will be collected from your patient.</ion-text
       >
     </li>
     <li class="lineheight-80 paddingtop-10">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >Receivables: Insurance (HMO) + PhilHealth + <b>&#8369;{{InsurancePF | number}}</b>
+        >Receivables: Insurance (HMO) + PhilHealth + <b>&#8369;{{InsurancePF}}</b>
       </ion-text>
     </li>
     <li class="lineheight-80 paddingtop-10">
@@ -980,12 +980,12 @@ ______                         ______   _   _   _____   _____
   <ul *ngIf="!txtPersonalPhilHealthPF && txtPersonalPhilHealthVAT">
     <li class="lineheight-80">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >Total amount of <b>&#8369;{{PersonalPhilhealthPF | number}}</b> (+ VAT) will be collected from your patient.</ion-text
+        >Total amount of <b>&#8369;{{PersonalPhilhealthPF}}</b> (+ VAT) will be collected from your patient.</ion-text
       >
     </li>
     <li class="lineheight-80 paddingtop-10">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >Receivables: <b>&#8369;{{PersonalPhilhealthPF | number}}</b> (+ VAT) + PhilHealth</ion-text
+        >Receivables: <b>&#8369;{{PersonalPhilhealthPF}}</b> (+ VAT) + PhilHealth</ion-text
       >
     </li>
     <li class="lineheight-80 paddingtop-10">
@@ -998,12 +998,12 @@ ______                         ______   _   _   _____   _____
   <ul *ngIf="!txtPersonalPhilHealthPF && !txtPersonalPhilHealthVAT">
     <li class="lineheight-80">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >Total amount of <b>&#8369;{{PersonalPhilhealthPF | number}}</b> will be collected from your patient.</ion-text
+        >Total amount of <b>&#8369;{{PersonalPhilhealthPF}}</b> will be collected from your patient.</ion-text
       >
     </li>
     <li class="lineheight-80 paddingtop-10">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >Receivables: <b>&#8369;{{PersonalPhilhealthPF | number}}</b> + PhilHealth</ion-text
+        >Receivables: <b>&#8369;{{PersonalPhilhealthPF}}</b> + PhilHealth</ion-text
       >
     </li>
     <li class="lineheight-80 paddingtop-10">
