--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,8 +1,8 @@
 <ion-content>
   <div id="header">
-    <div id="app-bar">
+    <!--div id="app-bar">
       <ion-icon name="arrow-back" routerLink="/"> </ion-icon>
-    </div>
+    </div-->
 
     <div id="logo">
       <h1>DOKi <br /> <p>v{{this.constants.DOCTOR_PORTAL__VALUE__VERSION}}</p></h1>
@@ -18,9 +18,16 @@
     </p> -->
   </div>
 
-  <div class="wrapper">
+  <div class="wrapper" >
+    <ion-grid>
+      <ion-row>
+        <ion-col size-lg="4" offset-lg="4 " size-md="4" offset-md="4 " size-sm="6" size="12" class="my-custom-slider ">
+
+
     <ion-card class="form-wrapper">
       <ion-card-content>
+
+
         <ion-item>
           <ion-icon name="mail"></ion-icon>
           <ion-input
@@ -61,7 +68,19 @@
           <span *ngIf="!btnDisable"></span
           ><ion-spinner *ngIf="btnDisable"></ion-spinner>
         </ion-button>
+
+
+   
+
+
       </ion-card-content>
+
+
+
+
     </ion-card>
+  </ion-col>
+</ion-row>
+</ion-grid>
   </div>
 </ion-content>
