--- a/src/app/chh-web-components/chh-app-forgot-password/chh-app-forgot-password.component.html
+++ b/src/app/chh-web-components/chh-app-forgot-password/chh-app-forgot-password.component.html
@@ -88,10 +88,9 @@
     </div>
   
     <div class="wrapper" >
-      <ion-grid>
-        <ion-row>
-          <ion-col size-lg="4" offset-lg="4 " size-md="4" offset-md="4 " size-sm="6" size="12" class="my-custom-slider ">
-  
+      <ion-grid >
+        <ion-row >
+          <ion-col size-md="10" offset-md="1"  size-sm="10" offset-sm="1"  >
   
       <ion-card class="form-wrapper">
         <ion-card-content>
@@ -135,7 +134,7 @@
   
   
       </ion-card>
-    </ion-col>
+ </ion-col>
   </ion-row>
   </ion-grid>
   
