doctor status fix

--- a/src/app/tab-in-patients/tab-in-patients.page.html
+++ b/src/app/tab-in-patients/tab-in-patients.page.html
@@ -180,7 +180,7 @@
                       {{x.room_no}}<br />
                  
                       <ion-icon name="clipboard-outline" slot="start"></ion-icon>
-                      as {{x.Doctor_Status}}<br />
+                      as {{x.doctor_Status}}<br />
                       <!--ion-icon name="body-outline"></ion-icon>Patient Journey<br /-->
                     </p>
                     <br />
