--- a/src/app/chh-web-components/chh-app-forgot-password/chh-app-forgot-password.component.scss
+++ b/src/app/chh-web-components/chh-app-forgot-password/chh-app-forgot-password.component.scss
@@ -4,7 +4,8 @@ ion-content {
   #header {
     height: 33%;
     // background: #275228; 
-    background: linear-gradient(120deg, rgb(56, 119, 57) 25%, rgb(39, 83, 40) 100%);
+    // background: linear-gradient(160deg, rgb(56, 119, 57) 25%, rgb(39, 83, 40) 100%);
+    background: linear-gradient(180deg, rgba(39,82,40,1) 0%, rgba(0,148,68,1) 100%);
     border-radius: 0 0 20px 20px;
     display: flex;
     flex-direction: column;
