--- a/src/app/tab-news-feed/tab-news-feed.page.html
+++ b/src/app/tab-news-feed/tab-news-feed.page.html
@@ -19,7 +19,7 @@
     <ion-row>
       <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4">
         <div *ngFor="let x of newsfeed">
-        <ion-card (click)="showaddmodal1(x)" *ngIf="x.visibility">
+        <ion-card (click)="showaddmodal1(x)" *ngIf="x.visibility" mode="ios">
           <!--img  *ngIf="x.imageUrl != ''" src="{{x.imageUrl}}" style="width: auto; height: auto;width: 100%;max-height: 200px" />
           <div class="rect-img-container"  *ngIf="x.imageUrl != ''">
             <img class="rect-img" src="{{x.imageUrl}}" alt="">
