--- a/src/app/pages/admin/tabs-dashboard/tabs-dashboard.page.html
+++ b/src/app/pages/admin/tabs-dashboard/tabs-dashboard.page.html
@@ -10,5 +10,13 @@
 </ion-header>
 
 <ion-content>
+  <ion-button
+  expand="block"
+  id="btn-confirm"
+  (click)="checkInput()"
+  ><div >
+    refreshtoken
+  </div>
 
+</ion-button>
 </ion-content>
