Update Forgot Password.

--- a/src/app/chh-web-components/chh-app-forgot-password/chh-app-forgot-password.component.html
+++ b/src/app/chh-web-components/chh-app-forgot-password/chh-app-forgot-password.component.html
@@ -99,7 +99,7 @@
               <ion-item>
                 <ion-icon name="mail"></ion-icon>
                 <ion-input
-                  placeholder="E-Mail"
+                  placeholder="Email"
                   type="text"
                   [(ngModel)]="forgotPasswordV3.email"
                 ></ion-input>
