Update login page inquiries text layout.

--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -81,6 +81,11 @@ ion-content {
       }
     }
   }
+
+  // ion-label {
+  //   font-size: 12px;
+  //   font-weight: 600;
+  // }
 }
 
 .cs-wrapper {
