--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -82,25 +82,28 @@
               </p>
             </ion-card-content>
           </ion-card>
+          <ion-item class="cs-wrapper" lines="none">
+            <p align="center" class="fontSize-12">
+              {{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO}}
+              <br />(<b
+                ><a href="tel: +63322338000"
+                  >{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO_TELEPHONE}}</a
+                ></b
+              >).
+              <!-- <br />
+              <br />{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO_APP_VERSION}}
+              {{this.constants.DOCTOR_PORTAL__VALUE__VERSION}} -->
+            </p>
+          </ion-item>
         </ion-col>
       </ion-row>
     </ion-grid>
   </div>
 </ion-content>
-<ion-item class="cs-wrapper">
-  <p align="justify" class="fontSize-12">
-    {{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO}} <br />(<b
-      ><a href="tel: +63322338000"
-        >{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO_TELEPHONE}}</a
-      ></b
-    >). 
-    <!-- <br />
-    <br />{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO_APP_VERSION}}
-    {{this.constants.DOCTOR_PORTAL__VALUE__VERSION}} -->
-  </p>
-</ion-item>
 <ion-footer class="ion-no-border">
   <ion-item lines="none" class="fontSize-12">
-    <ion-label class="ion-text-center">( Made by Chong Hua for Chong Hua )</ion-label>
+    <ion-label class="ion-text-center"
+      >( Made by Chong Hua for Chong Hua )</ion-label
+    >
   </ion-item>
 </ion-footer>
