Update news feed details card and forgot password ionicon for doctor code.

--- a/src/app/chh-web-components/chh-app-forgot-password/chh-app-forgot-password.component.html
+++ b/src/app/chh-web-components/chh-app-forgot-password/chh-app-forgot-password.component.html
@@ -105,7 +105,7 @@
                 ></ion-input>
               </ion-item>
               <ion-item>
-                <ion-icon name="lock-closed"></ion-icon>
+                <ion-icon name="person"></ion-icon>
                 <ion-input
                   type="text"
                   placeholder="Doctor Code"
