--- a/src/app/chh-web-components/chh-app-newsfeed/chh-app-newsfeed.component.html
+++ b/src/app/chh-web-components/chh-app-newsfeed/chh-app-newsfeed.component.html
@@ -65,7 +65,7 @@
   <ion-grid class="ion-no-padding">
     <ion-row>
       <ion-col >
-        <ion-card>
+        <ion-card mode="ios">
           <img *ngIf="data.imageUrl != ''" src="{{data.imageUrl}}" />
           <ion-card-header>
             <ion-card-title class="ion-text-wrap">{{data.title}}</ion-card-title>
