Update login bottom tagline.

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -103,7 +103,7 @@
 <ion-footer class="ion-no-border">
   <ion-item lines="none" class="fontSize-12">
     <ion-label class="ion-text-center"
-      >( Made by Chong Hua for Chong Hua )</ion-label
+      >( Made by Chong Hua Hospital for Chong Hua Hospital )</ion-label
     >
   </ion-item>
 </ion-footer>
