fixed missing doctor status on inpatient detail

--- a/src/app/chh-web-components/chh-app-patient-header/chh-app-patient-header.component.html
+++ b/src/app/chh-web-components/chh-app-patient-header/chh-app-patient-header.component.html
@@ -28,7 +28,7 @@
               <ion-icon name="bed-outline" slot="start"></ion-icon>
               Room {{ x.room_no }}<br />
               <ion-icon name="clipboard-outline" slot="start"></ion-icon>
-              as {{ x.Doctor_Status }}<br />
+              as {{ x.doctor_Status }}<br />
               <ion-chip *ngIf="x.admission_status == 'AC'">
                 <ion-label color="mango"><b>Admitted</b></ion-label>
               </ion-chip>
