fix for as in in patient detail

--- a/src/app/chh-web-components/chh-app-patient-header/chh-app-patient-header.component.html
+++ b/src/app/chh-web-components/chh-app-patient-header/chh-app-patient-header.component.html
@@ -92,7 +92,7 @@
           </div>
           <div class=" font-size12">
             <ion-icon name="clipboard-outline" slot="start"></ion-icon>
-            as {{x.Doctor_Status}}&nbsp;
+            as {{x.doctor_Status}}&nbsp;
             <ion-chip *ngIf="x.admission_status == 'AC'">
               <ion-label color="mango"><b>Admitted</b></ion-label>
             </ion-chip>
