--- a/src/app/pages/index/index.page.scss
+++ b/src/app/pages/index/index.page.scss
@@ -1,37 +1,33 @@
-ion-slide {
-  @media (max-width: 411px) {
-    padding-top: 5%;
-  }
-
-  display: block;
-
-  img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 300px;
-  }
-
-  .logoContainer {
-    width:auto; 
-  }
-  
-  .flexibleImg {
-    width: 100px;
-    height: auto;
-  }
-
-  h2 {
-    font-size: 36px;
-    font-weight: bold;
-  }
-}
-
 ion-slides {
-  --bullet-background-active: #009444;
+  height: 100%;
 }
 
-.my-custom-slider {
-  padding-top: 30px;
-  padding-bottom: 10px;
+ion-slide {
+  display: block;
+}
+
+ion-slide img {
+  padding: 2%;
+  max-width: 420px;
+}
+
+.slider-text {
+  padding: 5%;
+}
+
+.slider-text h2 {
+  font-family: "Nunito", sans-serif;
+}
+
+.slider-text p {
+  font-size: small;
+}
+
+.navigator {
+  display: flex;
+  justify-content: space-between;
+  position:absolute;
+  width: 100%;
+  left: 0;
+  bottom: 0;
 }
