Update onboarding ux microcopy.

--- a/src/app/pages/index/index.page.html
+++ b/src/app/pages/index/index.page.html
@@ -28,8 +28,8 @@
       <div class="slider-text">
         <h2>View your admitted patients.</h2>
         <p>
-          You will be notified via SMS when you have patients admitted to the
-          hospital at both sites (Cebu and Mandaue).
+          Get notified via SMS when your patients are admitted to the hospital
+          at both sites (Cebu and Mandaue).
         </p>
       </div>
 
@@ -47,10 +47,10 @@
       <!-- <img src="assets/onboarding/3-onboarding-notifications.png"> -->
       <img src="assets/img/online-doctor-rafiki.svg" />
       <div class="slider-text">
-        <h2>Submit professional fee online.</h2>
+        <h2>Submit professional fees online.</h2>
         <p>
-          You will be notified via SMS if your patient is about to be
-          discharged. Then, you can submit your professional fee using this app.
+          Get notified via SMS when your patients are about to be discharged.
+          Then, submission of professional fees can be done anytime, anywhere.
         </p>
       </div>
 
@@ -70,7 +70,8 @@
       <div class="slider-text">
         <h2>News feed</h2>
         <p>
-          Get updated with hospital-wide and department-level announcements.
+          Get updated with hospital-wide news and department-level
+          announcements.
         </p>
       </div>
 
