--- a/src/app/pages/index/index.page.html
+++ b/src/app/pages/index/index.page.html
@@ -7,8 +7,8 @@
       <div class="slider-text">
         <h2><b>Welcome aboard, Dok!</b></h2>
         <p>
-          We <b>thank you</b> for your courage and service. Swipe left to see
-          what we've built for you.
+          <b>Chong Hua Hospital</b> extends its <b>gratitude</b> to you for your
+          courage and service! Swipe left to see what we’ve built for you.
         </p>
       </div>
 
@@ -68,7 +68,7 @@
       <!-- <img src="assets/onboarding/4-onboarding-newsfeed.png"> -->
       <img src="assets/img/news-rafiki.svg" />
       <div class="slider-text">
-        <h2>News feed</h2>
+        <h2>News Feed</h2>
         <p>
           Get updated with hospital-wide news and department-level
           announcements.
