Fix install prompt on android/windows.

--- a/src/app/pages/index/index.page.html
+++ b/src/app/pages/index/index.page.html
@@ -87,6 +87,7 @@
       </ion-slide> -->
       <ion-button
         id="button-lets-go"
+        *ngIf="android"
         expand="block"
         (click)="addToHomeScreen()"
         color="primary"
