--- a/src/app/pages/executuve/tabs/tabs.page.html
+++ b/src/app/pages/executuve/tabs/tabs.page.html
@@ -13,7 +13,10 @@
       <ion-label class="tab-font-family">Doctors</ion-label>
     </ion-tab-button>
 
-
+    <ion-tab-button id="button-in-patients" tab="allpatients">
+      <ion-icon name="person-circle-outline"></ion-icon>
+      <ion-label class="tab-font-family">All Patients</ion-label>
+    </ion-tab-button>
 
 
     <ion-tab-button id="button-settings" tab="settings">
