--- a/src/app/pages/executuve/tabs-allpatients/tabs-allpatients.page.html
+++ b/src/app/pages/executuve/tabs-allpatients/tabs-allpatients.page.html
@@ -2,7 +2,7 @@
   <div *ngIf="!isDesktop">
     <ion-toolbar color="mango">
       <ion-title>
-        <ion-icon name="git-network-outline"></ion-icon> Doctors
+        <ion-icon name="git-network-outline"></ion-icon> Patients
       </ion-title>
     </ion-toolbar>
    
